設定 H.264 相容模式為預設選項

--- a/templates/index.html
+++ b/templates/index.html
@@ -494,7 +494,7 @@
             </div>
             <div class="setting-item">
                 <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
-                    <input type="checkbox" id="compatible-mode" style="width: 20px; height: 20px;">
+                    <input type="checkbox" id="compatible-mode" style="width: 20px; height: 20px;" checked>
                     <span>🚗 汽車/舊設備相容模式 (強制 H.264)</span>
                 </label>
                 <small>解決在汽車播放器上「有聲無影」的問題（強制使用 H.264 影像編碼）</small>
